# Orion-data-copilot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-api.txt  requirements-dev.txt  requirements-ui.txt  requirements.txt
.cursor/rules/: conda-dev-env.mdc  git-commit-policy.mdc
.github/workflows/: ci.yml  publish-ghcr.yml
app/: api.py  api_auth.py  api_middleware.py  config.py  entity_parser.py  executor.py  formatter.py  json_serialization.py  llm_planner.py  planner.py  remote_query.py  schemas.py  time_parser.py  version.py
app/connectors/: ingestflow.py  sentineldq.py
docs/: ARCHITECTURE.md  DECISIONS.md  PROJECT_VISION.md  ROADMAP.md  SYSTEM_DESIGN.md  TECH_SPEC.md  USE_CASES.md
scripts/: streamlit_app.py
tests/: test_api.py  test_config.py  test_entity_parser.py  test_executor.py  test_formatter.py  test_ingestflow_integration.py  test_json_serialization.py  test_llm_planner_validation.py  test_main_cli.py  test_planner_rules.py  test_remote_query.py  test_sentineldq_connector.py  test_time_parser.py
